syntax = "proto3";

package cato.db;
option go_package = "github.com/ncuhome/cato/generated";

import "cato/proto/struct.proto";


message DbOption {
  string name = 1;
}

message TableNameOption {
  string simple_name = 1;
  bool lazy_name = 2;
}

message TableOption {
  TableNameOption name_option = 1;
  string comment = 2;
  string charset = 3;
  cato.struct.FieldMapper field_mapper = 4;
}

enum DBKeyType {
  CATO_DB_KEY_TYPE_NO_KEY = 0;
  CATO_DB_KEY_TYPE_INDEX = 1;
  CATO_DB_KEY_TYPE_UNIQUE = 2;
  CATO_DB_KEY_TYPE_COMBINE = 3;
  CATO_DB_KEY_TYPE_PRIMARY = 4;
}

message DBKey {
  string key_name = 1;
  DBKeyType key_type = 2;
  bool auto_incr = 3;
}

message TimeOption {
  bool unix_to_time = 1;
}

message ColumnDescriptor {
  string field_type = 1;
  string field_name = 2;
  bool nullable = 3;
  string default = 4;
  string comment = 5;
}

message JsonTransOption {
  bool lazy_load = 1;
  bool has_raw_field = 2;
}

message ColumnOption {
  JsonTransOption json_trans = 1;
  TimeOption time_option = 2;
  ColumnDescriptor col_desc = 3;
  repeated DBKey keys = 4;
  repeated cato.struct.FieldTag tags = 5;
}